<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">E-Tour</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hero_image">Hero image</string>
    <string name="welcome_to">Welcome to</string>
    <string name="e_tour_string">E-Tour string</string>
    <string name="app_description">Lorem ipsum dolor sit amet consectetur. Ut ornare adipiscing sed purus neque gravida.</string>
    <string name="username_placeholder">Enter your username</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="password_label">Password</string>
    <string name="username_label">Username</string>
    <string name="forgot_password">Forgot password</string>
    <string name="signin_button_text">Let\'s go</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="chevron_left">Chevron left</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="please_set_up_some_basic_information">Please set up some basic information!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="id_passport">ID/Passport</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="is_foreigner">Is Foreigner</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="successfully_created_account_enjoy_e_tour_now">Successfully created account, enjoy E-Tour now</string>
    <string name="please_wait_we_are_signing_in_for_you">Please wait, we are signing in for you...</string>
    <string name="fail_to_sign_in">Fail to sign in</string>
    <string name="failed_to_sign_up">Failed to sign up</string>
    <string name="please_wait_while_we_are_signing_up_for_you">Please wait while we are signing up for you...</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="saved">Saved</string>
    <string name="discover_new_experiences">Discover new experiences</string>
    <string name="for_you">For you</string>
    <string name="description">Description</string>
    <string name="comment">Comment</string>
    <string name="view_all">View all</string>
    <string name="book_ticket">Book ticket</string>
    <string name="loading_tourist_route">Loading tourist route...</string>
    <string name="route_destinations">Route destinations</string>
    <string name="depart_at">Depart at</string>
    <string name="tour_type">Tour type</string>
    <string name="view_detail_information">View detail information</string>
    <string name="normal_tour">Normal</string>
    <string name="promotion_tour">Promotion</string>
    <string name="information">Information</string>
    <string name="checkout">Checkout</string>
    <string name="receipt">Receipt</string>
    <string name="you_can_use_it_from">You can use it from</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="using_credit_card">Using credit card</string>
    <string name="using_cash">Using cash</string>
    <string name="contact_information">Contact information</string>
    <string name="please_enter_contact_information">Please enter contact information</string>
    <string name="first_visitor">First visitor</string>
    <string name="visitor_information">Visitor information</string>
    <string name="add_new_vistor">Add new vistor</string>
    <string name="options">Add options</string>
    <string name="special_requirement">Special requirement</string>
    <string name="pickup_location">Pickup location</string>
    <string name="enter_pickup_location_here">Enter pickup location here</string>
    <string name="detail_price">Detail price</string>
    <string name="total_price">Total price</string>
    <string name="surname">Surname</string>
    <string name="in_your_id_passport">In your id/passport</string>
    <string name="example_email_example_com">Example: email@example.com</string>
    <string name="choose_voucher">Choose voucher</string>
    <string name="voucher">Voucher</string>
    <string name="change">Change</string>
    <string name="you_have_1_voucher">You have %1$d voucher</string>
    <string name="check_out">Check out</string>
    <string name="ticket_id">Ticket id</string>
    <string name="back_to_home">Back to home</string>
    <string name="booking_date">Booking date</string>
    <string name="customer_name">Customer name</string>
    <string name="choose_payment_method_and_checkout">Choose payment method</string>
    <string name="receipt_information">Receipt information</string>
    <string name="edit_visitor_information">Edit visitor information</string>
    <string name="age">Age</string>
    <string name="untitled_tour">Untitled tour</string>
    <string name="no_description">No description</string>
    <string name="fetching_tour_list_of_route">Fetching tour list of route</string>
    <string name="special_requirements">Special requirements</string>
    <string name="new_visitor">New visitor</string>
    <string name="remove_visitor">Remove</string>
    <string name="more_requirements">More requirements</string>
    <string name="enter_special_requirements_here">Enter special requirements here</string>
    <string name="tour_name">Tour name</string>
    <string name="route_name">Route name</string>
    <string name="visitor">Visitor</string>
    <string name="booked_ticket">Booked ticket</string>
    <string name="rate_this_tour">Rate this tour</string>
    <string name="tourist_route_name">Tourist route name</string>
    <string name="submit">Submit</string>
    <string name="how_do_you_feel_about_this_tour">How do you feel about this tour?</string>
    <string name="departure_date">Departure date</string>
    <string name="departure_time">Departure time: </string>
    <string name="thanks_for_rating">Thanks for rating</string>
    <string name="your_recent_rating">Your recent rating</string>
    <string name="user_display_name">User display name</string>
    <string name="user_comment_here">User comment here</string>
    <string name="some_suggestion_for_you">Some suggestion for you...</string>
    <string name="reviews"> reviews</string>
    <string name="saved_tour">Saved tour</string>
    <string name="domestic">Domestic</string>
    <string name="international">International</string>
    <string name="popular">Popular</string>
    <string name="other_information">Other information</string>
    <string name="view_profile">View profile</string>
    <string name="my_cards">My cards</string>
    <string name="manage_your_card">Manage your card</string>
    <string name="my_vouchers">My vouchers</string>
    <string name="manage_your_vouchers">Manage your vouchers</string>
    <string name="settings">Settings</string>
    <string name="customize_your_experiences">Customize your experiences</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="contact_support">View support</string>
    <string name="contact_our_support_centre">View all support chats</string>
    <string name="logout">Logout</string>
    <string name="expired_date">Expired Date</string>
    <string name="using_condition">Using condition</string>
    <string name="save_this_voucher">Save this voucher</string>
    <string name="discount">Discount </string>
    <string name="incoming_tour">Incoming tour</string>
    <string name="visited_tour">Visited tour</string>
    <string name="visitors_management">Visitors management</string>
    <string name="manage_visitor_information">Manage visitor information</string>
    <string name="contact_support_detail_incoming_tour">Contact support</string>
    <string name="contact_our_support_centre_detail_incoming_tour">Contact our support centre</string>
    <string name="report_this_tour">Report this tour</string>
    <string name="send_report">Send report</string>
    <string name="customer_list">Customer list</string>
    <string name="discard_this_ticket">Discard this ticket</string>
    <string name="rate">Rate</string>
    <string name="send">Send</string>
    <string name="please_choose_type_of_report">Please choose type of report</string>
    <string name="violate_policy">Violate policy</string>
    <string name="rate_this_route">Rate this route</string>
    <string name="nguyen_hoang_hy">Nguyen Hoang HY</string>
    <string name="_06_05_2023">06/05/2023</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="edit_public_rating">Edit public rating</string>
    <string name="back">Back</string>
    <string name="fake_tour">Fake tour</string>
    <string name="scam">Scam</string>
    <string name="thank_for_your_report">Thank for your report</string>
    <string name="your_report_is_being_reviewed_by_our_staff">Your report is being reviewed by our staff</string>
    <string name="change_staff">Change staff</string>
    <string name="enter_your_message_here">Message...</string>
    <string name="subscription_route_channel_name">Subscription tourist route</string>
    <string name="subscription_route_channel_description">New update about tourist route that you subscribe</string>
    <string name="report_staff">Report staff</string>
    <string name="placeholder">Placeholder</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="add_to_saved">Add to saved</string>
    <string name="type">Type</string>
    <string name="country">Country</string>
    <string name="reservation_fee">Reservation fee</string>
    <string name="card_information">Card information</string>
    <string name="update">Update</string>
    <string name="_0123_4567_8910">0123 4567 8910 1112</string>
    <string name="card_number">Card number</string>
    <string name="_06_05">06/05</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="remove_card">Remove card</string>
    <string name="make_as_default">Make as default</string>
    <string name="back_button">back button</string>
    <string name="use_your_contact_information">Use your contact information</string>
</resources>