<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.Authentication">

    <data>

        <import type="androidx.databinding.Observable" />

        <variable
            name="viewModel"
            type="com.teamone.e_tour.activities.Authentication.AuthenticationInfo" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingTop="70dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sign in"
            android:textSize="36sp"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="25dp"
            android:hint="@string/username_label"
            android:textColorHint="?colorOnPrimary"
            app:boxBackgroundColor="?colorSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@{viewModel.username}"
                android:textColor="?colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_label"
            android:textColorHint="?colorOnPrimary"
            app:boxBackgroundColor="?colorSecondary"
            app:endIconMode="password_toggle"
            app:endIconTint="?colorOnPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@{viewModel.password}"
                android:textColor="?colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="?colorPrimary" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/primary_20"
            android:paddingVertical="8dp"
            android:text="@string/signin_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account" />

                    <Button
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:letterSpacing="0.05"
                        android:text="@string/sign_up_here"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="-10dp"
                    android:text="@string/or"/>

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:letterSpacing="0.05"
                    android:text="@string/sign_in_with_google"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</layout>