<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VisitorInformationFragment"
    android:orientation="vertical"
    android:background="@color/gray">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:paddingTop="30dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/chevron_left"
            app:title="@string/contact_information"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/surname"
            android:textColorHint="@color/placeholder"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingBottom="0dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_your_id_passport"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/phone_number"
            android:textColorHint="@color/placeholder"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:paddingBottom="0dp"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"
            android:textColorHint="@color/placeholder"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:paddingBottom="0dp"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/example_email_example_com"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/use_your_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/use_your_contact_information"
        android:letterSpacing="0.02"
        android:fontFamily="@font/manrope_semibold"
        android:backgroundTint="@color/ocean_blue"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/next"
        android:letterSpacing="0.02"
        android:fontFamily="@font/manrope_semibold"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textAllCaps="false"/>
</LinearLayout>